update: updated channel doc
